7116979: Unexpected pixel colour when converting images to TYPE_BYTE_INDEXED

Unexpected pixel colour when converting images to TYPE_BYTE_INDEXED

Reviewed-by: prr, flar